--- a/css/style.css
+++ b/css/style.css
@@ -6,98 +6,61 @@
 }
 
 body {
-  background-color: rgb(229, 222, 243);
-  background-size: auto 100vh; 
-  font-family: 'Source Code Pro', monospace;
+  background-size: auto 100vh;
+  font-family: "Roboto", sans-serif;
   height: 100vh;
-  font-size: 12px;
 }
 
 header {
   height: 100vh;
-  display: flex;
-  justify-content: right;
-  align-items: right;
+  background-color: #212121;
 }
 
-.bg-light {
-  background-color: white !important;
-  box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
-  position: fixed;
-  width: 100vw;
-  padding-top: 1em;
-  z-index: 1;
-}
-
-
-.menu ul {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 5em;
-}
-
-.menu li {
- list-style: none; 
-}
-
-.bg-light .menu-link {
-  display: block;
-  padding: 10px 20px;
-  transition: background-color 1s, color 1s;
-}
-
-.bg-light .menu-link:active,
-.bg-light .menu-link:hover {
-  background-color: #e47aff;
+header a {
   color: white;
 }
 
-/* .bg-light .navbar-toggler:active,
-.bg-light .navbar-toggler:focus {
-  border-color: #e47aff;
-} */
-
-.menu-link {
-  color: mediumpurple;
-  text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+.navbar-collapse {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
 }
 
-.menu-link:hover {
-  text-decoration: underline;
+.navbar-nav li {
+  margin: 0px 15px 0px 15px;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
 }
 
-.logo {
-  width: 6em;
+.titulo {
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 90%;
+  width: 100%;
 }
 
 .titulo h1 {
-  margin-top: 15%;
-  margin-left: 5%;
-  max-width: 650px;
-  position: absolute;
+  font-family: "Sawarabi Gothic";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 43px;
 }
 
-.site-title:after{
-  color: rgb(22, 22, 22);
-  content: '|';
-  opacity: 1;
-  animation: pisca .7s infinite;
- 
+.titulo h2 {
+  font-family: "Russo One";
+  font-size: 46px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
-
-.site-title {
-  font-size: 2.5em;
-  font-family: 'Special Elite', cursive;
-}
-
-@keyframes pisca{
-    0%, 100%{
-        opacity: 1;
-    }
-    50%{
-        opacity: 0;
-    }
+.titulo p {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 24px;
 }
 
 .perfil img {
@@ -106,24 +69,17 @@ header {
   margin-left: 40em;
 }
 
-/* .fundo, .titulo {
-  box-sizing: border-box;
-} */
 .sobre,
-.portfolio {
+.projetos {
   padding: 2em;
   min-height: 100vh;
+  color: white;
 }
 
-/* .terceiro-p {
-   margin-left: 18em;
-  } */
-
-.sobre h2,
 .contato h2,
-.portfolio h2 {
-  font-family: 'Lobster Two', cursive;
-  color: mediumpurple;
+.projetos h2 {
+  font-family: "Roboto", sans-serif;
+  color: white;
   font-size: 2em;
   padding: 2em;
 }
@@ -134,6 +90,17 @@ header {
   text-align: justify;
 }
 
+.sobre h2 {
+  padding: 100px 0px 2px 0px;
+}
+
+.sobre hr {
+  width: 75px;
+  height: 7px;
+  padding-bottom: 30px;
+  color: whitesmoke;
+}
+
 .avatar-dev img {
   max-width: 20em;
 }
@@ -141,56 +108,47 @@ header {
 .avatar-criative img {
   max-width: 16em;
 }
-
+.sobre {
+  display: flex;
+  background-color: #3e464c;
+}
+.container {
+  display: contents;
+}
 .sobre .avatar-dev img {
   float: right;
   margin-left: 3em;
-  
 }
 
 .sobre .avatar-criative {
   float: left;
   margin-right: 3em;
- 
 }
 
-.desenhos figure {
-  display: flex;
-  justify-content: space-between;
+.sobre-text {
+  width: 600px;
+  margin-left: 100px;
 }
-
-.img-desenho {
-  margin-top: -100px;
-  width: 100%;
-  height: 12em;
-  object-fit: cover;
-  border: 7px solid rgb(171, 143, 226);
-  border-radius: 0%;
-  box-shadow: none;
-}
-
-/* .quarto-p {
-  left: 12%;
-} */
 
 .contato {
   min-height: 90vh;
 }
 
-.portfolio, .sobre {
+.projetos,
+.sobre {
   position: relative;
 }
 
-.portfolio:after {
-  content : "";
+.projetos:after {
+  content: "";
   display: block;
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url('../img/fundo.jpg');
+  background-image: url("../img/fundo.jpg");
   width: 100%;
   height: 100%;
-  opacity : 0.1;
+  opacity: 0.1;
   z-index: -1;
 }
 
@@ -199,32 +157,31 @@ header {
   gap: 1em;
 }
 
-.portfolio .grid {
+.projetos .grid {
   display: grid;
   gap: 1em;
 }
 
-.portfolio figure {
+.projetos figure {
   margin-bottom: 0;
 }
 
-.portfolio figure:hover {
+.projetos figure:hover {
   -webkit-transform: scale(1.4);
   transition: 1s;
   object-fit: none;
 }
 
-.portfolio figcaption {
-  font-family: 'Roboto', sans-serif;
+.projetos figcaption {
+  font-family: "Roboto", sans-serif;
   color: rgba(0, 0, 0, 0.835);
 }
 
-.desenhos ,
-.portfolio figure {
+.projetos figure {
   text-align: center;
 }
 
-.img-portfolio {
+.img-projetos {
   height: 180px;
   width: 100%;
   object-fit: cover;
@@ -240,11 +197,11 @@ header {
   color: mediumpurple;
   font-size: 4em;
   transition: text-shadow 1s;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .contato a:active,
-.contato a:hover  {
+.contato a:hover {
   text-decoration: none;
   text-shadow: 0px 0px 10px rgba(128, 225, 255, 0.794);
 }
