--- a/css/media.css
+++ b/css/media.css
@@ -4,10 +4,11 @@
     font-size: 14px;
   }
   .titulo {
-    padding-top: 20%;
+    /* padding-top: 20%;
     max-width: 200px;
     max-height: 50px;
-    font-size: 0.9em;
+    font-size: 0.9em; */
+    /* width: auto; */
   }
 
   .perfil img {
@@ -16,20 +17,10 @@
     margin: 300px 0 0 30px;
     width: 20em;
   }
-
-  .desenhos {
-    margin-top: 15%;
-  }
-  .desenhos img {
-    margin: 0;
-  }
 }
 
 @media (min-width: 560px) {
-  .portfolio .grid {
-    grid-template-columns: 240px 240px;
-  }
-  .desenhos .grid {
+  .projetos .grid {
     grid-template-columns: 240px 240px;
   }
 }
@@ -44,17 +35,11 @@
 }
 
 @media (min-width: 880px) {
-  .portfolio .grid {
+  .projetos .grid {
     grid-template-columns: repeat(3, 260px);
     align-content: center;
     justify-content: center;
-    height: calc(100vh - 8em - 48px);
-  }
-  .desenhos .grid {
-    grid-template-columns: repeat(3, 260px);
-    align-content: center;
-    justify-content: center;
-    height: calc(100vh - 8em - 48px);
+    /* height: calc(100vh - 2em - 18px); */
   }
 }
 
@@ -62,12 +47,6 @@
 @media (min-width: 1200px) {
   body {
     font-size: 20px;
-  }
-}
-
-@media (min-width: 1080px) {
-  .logo {
-    margin-right: 33em;
   }
 }
 
