--- a/css/media.css
+++ b/css/media.css
@@ -1,21 +1,22 @@
 /* se a tela tiver pelo menos 400px vai carregar estes estilos */
-@media (max-width: 414px) {
+@media (max-width: 840px) {
   body {
     font-size: 14px;
   }
   .titulo {
-    /* padding-top: 20%;
-    max-width: 200px;
-    max-height: 50px;
-    font-size: 0.9em; */
-    /* width: auto; */
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: min-content;
+    width: auto;
   }
 
-  .perfil img {
-    position: relative;
-    padding: 0%;
-    margin: 300px 0 0 30px;
-    width: 20em;
+  .sobre-text {
+    display: contents;
+  }
+
+  .avatar-dev img {
+    display: flex;
   }
 }
 
@@ -39,7 +40,11 @@
     grid-template-columns: repeat(3, 260px);
     align-content: center;
     justify-content: center;
-    /* height: calc(100vh - 2em - 18px); */
+  }
+
+  .sobre .grid {
+    grid-template-columns: 200px 200px;
+    display: flex;
   }
 }
 
@@ -47,13 +52,5 @@
 @media (min-width: 1200px) {
   body {
     font-size: 20px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1200px;
   }
 }
