--- a/css/media.css
+++ b/css/media.css
@@ -57,3 +57,13 @@
     font-size: 20px;
   }
 }
+
+.timeline-content-info {
+  @media (max-width: 500px) {
+    .timeline-content-info-title,
+    .timeline-content-info-date {
+      display: block;
+      width: 100%;
+    }
+  }
+}
