--- a/css/media.css
+++ b/css/media.css
@@ -154,13 +154,30 @@
     display: grid;
   }
   .container-colors h2 {
-    font-size: 26px;
+    font-size: 28px;
   }
   .container-colors p {
-    font-size: 14px;
+    font-size: 20px;
   }
   .container-left,
   .container-right {
     width: auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .cd-timeline-content h2 {
+    font-size: 16px;
+    font-size: 1.25rem;
+  }
+  .cd-timeline-content p {
+    font-size: 12px;
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 446px) {
+  #experiencia::before {
+    top: 18%;
   }
 }
