--- a/css/media.css
+++ b/css/media.css
@@ -174,7 +174,20 @@
     font-size: 12px;
     font-size: 1rem;
   }
-}
+  .pie {
+    --p: 10;
+    --b: 13px;
+    --c: darkred;
+    --w: 80px;
+    width: var(--w);
+    font-size: 12px;
+  }
+  .skills .content-chart {
+    margin-bottom: 0;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+  }
 
 @media only screen and (max-width: 446px) {
   #experiencia::before {
