--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,6 @@ header a {
   }
 }
 .btn-pisca {
-  background-color: #ce300c;
-  color: #fff;
   padding: 0.6em 0.8em;
   display: inline-block;
   text-decoration: none;
@@ -320,13 +318,13 @@ hr {
 }
 
 .container-right {
-  background-color: #3f51b5;
+  background-color: #2c3a47;
   color: white;
   width: 50%;
   padding: 10%;
 }
 .container-left {
-  background-color: #212121;
+  background-color: #3f51b5;
   color: white;
   width: 50%;
   padding: 10%;
@@ -446,7 +444,7 @@ Main components
 #experiencia::before {
   content: "";
   position: absolute;
-  top: 22%;
+  top: 18%;
   left: 25px;
   height: 76%;
   width: 3.5px;
@@ -680,7 +678,7 @@ Main components
   position: fixed;
   bottom: 20px;
   right: 50px;
-  color: whitesmoke;
-  opacity: 0.6;
+  color: #0d1117;
+  opacity: 0.8;
   border-radius: 10px;
 }
